--- a/feedly/users/templates/profile.html
+++ b/feedly/users/templates/profile.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Signup</title>
-</head>
-<body>
+{% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
 <div style="text-align:center">
@@ -51,32 +45,4 @@
 <br>
 </div>
 {% endblock %}
-{% for post in posts %}
-<div style ="border:1px solid gray;padding:2vw;">
-    <img src="{{ post.post_by.myprofile.avatar.url }}" style="width:3vw;height:3vw;" alt="pic">
-    <b><a href="{% url 'profile' post.post_by.id %}">{{ post.post_by.username }}</a> </b>
-    <i> {{ post.post_on }}</i><br><br><b>{{ post.title }} </b>
-    {%if post.about %}
-    <p>{{post.about }}</p>
-    {% endif %}
-    {%if post.text %}
-    <p>{{post.text }}</p>
-    {% endif %}
-    {% if post.image %}
-    <br>
-    <br>
-    <img style="width: 20vw; height: 25vh;"
-         src="{{ post.image.url }}" alt="imagpost">
-    {% endif %}
-    {% if post.video %}
-    <video width="600vw" height="400vw" controls>
-        <source src="{{ post.video.url }}" type="video/mp4"></video>
-    {% endif %}
-    <p>Votes = {{ votes }}</p>
-</div>
-<br>
 
-{% endfor %}
-
-</body>
-</html>
