--- a/feedly/users/templates/home.html
+++ b/feedly/users/templates/home.html
@@ -1,60 +1,148 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Feedly</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load staticfiles %}
+{% block content %}
 {% for message in messages %}
-<p style="color: green">{{ message }}</p>
+<p id= "message">{{ message }}</p>
 {% endfor %}
-<h1>welcome to feedly</h1>
-{% if request.user.is_authenticated %}
-    <a href="{% url 'profile' user.id %}">Profile</a>
-{% endif %}
-    <br>
-    {% if request.user.is_authenticated %}
-    <a href="{% url 'createpost' user.id %}">Create Post</a>
-    {% else %}
-    <a href="{% url 'signup' %}"> Sign Up</a>
-{% endif %}
-    <br>
-    {% if request.user.is_authenticated %}
-    <a href="{% url 'logout' %}"> log out</a>
-    {% else %}
-    <a href="{% url 'login' %}"> Log In</a>
-    {% endif %}
-<br>
-<br>
-<div style="margin-left:25vw;margin-right:28vw">
-
 {% for post in object_list %}
-
-    <div style ="border:1px solid gray;padding:2vw">
-        <img src="{{ post.post_by.myprofile.avatar.url }}" style="width:3vw;height:3vw;" alt="pic">
-        <b><a href="{% url 'profile' post.post_by.id %}">{{ post.post_by.username }}</a> </b>
-        <i> {{ post.post_on }}</i><br><br><b>{{ post.title }} </b>
+<div class="leftcolumn">
+<div class="cardpost">
+    <div class="cardh">
+        <div class="dp">
+            <a href="{{ post.post_by.myprofile.avatar.url }}"><img src="{{ post.post_by.myprofile.avatar.url }}" class="postdp"></a>
+        </div>
+        <a style="text-decoration:none" href="{% url 'profile' post.post_by.id %}"><h4 style="padding-left:2%">{{ post.post_by.username }}</h4></a>
+        <i> {{ post.post_on }}</i>
+    </div>
+    <div class="cardh">
         {%if post.about %}
-        <p>{{post.about }}</p>
+        <h4>{{post.about }}</h4>
         {% endif %}
         {%if post.text %}
-        <p>{{post.text }}</p>
+        <h4>{{ post.text }}</h4>
         {% endif %}
+    </div>
+    {% if post.image %}
+    <img id="cmntmodal" onclick="item('image','{{ post.post_by.myprofile.avatar.url }}','{{ post.post_by }}','{{post.about}}','{{post.post_on}}','{{post.image.url}}')" src="{{ post.image.url }}" alt="img_post" class="fakeimg">
+    {% endif %}
+    {% if post.video %}
+    <video  id="videopost{{ post.post_on}}" class="fakeimg" onclick="item('video','{{ post.post_by.myprofile.avatar.url }}','{{ post.post_by }}','{{post.about}}','{{post.post_on}}','{{post.video.url}}')" controls>
+        <source src="{{ post.video.url }}" type="video/mp4" ></video>
+    {% endif %}
+    <div class="cardf">
+        <form action="{% url 'vote' %}" method="POST">
+            {{ post.result }}
+            <input type="hidden" name="post" value="{{post.pk}}">
+            {% csrf_token %}
+            {% if post in post_voted_list %}
+            <button type="submit" style="border:none" id="like" value="{{post.id}}"><i class="like fa fa-thumbs-down"></i></button>
+            {% else %}
+            <button type="submit" style="border:none" id ="like" value="{{post.id}}"><i class="like fa fa-thumbs-up"></i></button>
+            {% endif %}
+        </form>
+
+        <!--<i class="like fa fa-thumbs-down" style="padding-left:9px"></i>-->
         {% if post.image %}
-        <br>
-        <br>
-        <img style="width: 40vw; height: 45vh;"
-             src="{{ post.image.url }}" alt="imagpost">
+        <div id="cmntmodal" ><i onclick="item('image','{{ post.post_by.myprofile.avatar.url }}','{{ post.post_by }}','{{post.about}}','{{post.post_on}}','{{post.image.url}}')" class="like fa fa-comments" style="padding-left:9px"></i></div>
+        {% endif %}
+        {% if post.text %}
+        <div id="cmntmodal" ><i onclick="item('text','{{ post.post_by.myprofile.avatar.url }}','{{ post.post_by }}','{{post.about}}','{{post.post_on}}','{{post.text}}')" class="like fa fa-comments" style="padding-left:9px"></i></div>
         {% endif %}
         {% if post.video %}
-        <video width="600vw" height="400vw" controls>
-            <source src="{{ post.video.url }}" type="video/mp4"></video>
+        <div id="cmntmodal" ><i onclick="item('video','{{ post.post_by.myprofile.avatar.url }}','{{ post.post_by }}','{{post.about}}','{{post.post_on}}','{{post.video.url}}')" class="like fa fa-comments" style="padding-left:9px"></i></div>
         {% endif %}
-        <p>Votes = {{ votes }}</p>
+        <p style="padding-left:9px">200</p>
+        <i class="like fa fa-paper-plane" style="padding-left:9px"> </i>
     </div>
-    <br>
-
-{% endfor %}
 </div>
-</body>
-</html>
+</div>
+{% endfor %}
+<div class="rightcolumn">
+    <div class="card">
+        <img src="/static/explore-feed_preview.jpeg" class="fakeimg">
+        <h2 style="padding:6px">HOME</h2>
+        <p style="padding:6px">Some text about me in culpa qui officia deserunt mollit anim..</p>
+    </div>
+    <div class="card">
+        <h3> TRENDING COMMUNITIES </h3>
+        <div class="comm">
+            <div class="dp"><img src="/static/feedly_logo.svg" class="postdp"></div>
+            <div style="margin-left:19%;margin-top:-10%"><p > R/art</p></div>
+            <div class="ss"><button type="button" class="btnsub">Subscribe</button></div>
+        </div>
+        <div class="comm">
+            <div class="dp"><img src="/static/feedly_logo.svg" class="postdp"></div>
+            <div style="margin-left:19%;margin-top:-10%"><p > R/art</p></div>
+            <div class="ss"><button type="button" class="btnsub">Subscribe</button></div>
+        </div>
+        <div class="comm">
+            <div class="dp"><img src="/static/feedly_logo.svg" class="postdp"></div>
+            <div style="margin-left:19%;margin-top:-10%"><p > R/art</p></div>
+            <div class="ss"><button type="button" class="btnsub">Subscribe</button></div>
+        </div>
+        <div class="comm">
+            <div class="dp"><img src="/static/feedly_logo.svg" class="postdp"></div>
+            <div style="margin-left:19%;margin-top:-10%"><p > R/arthh</p></div>
+            <div class="ss"><button type="button" class="btnsub">Subscribe</button></div>
+        </div>
+    </div>
+</div>
+
+<!--{% if is_paginated %}-->
+<!--<ul class="pagination">-->
+    <!--{% if page_obj.has_previous %}-->
+    <!--<li><a href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>-->
+    <!--{% else %}-->
+    <!--<li class="disabled"><span>&laquo;</span></li>-->
+    <!--{% endif %}-->
+    <!--{% for i in paginator.page_range %}-->
+    <!--{% if page_obj.number == i %}-->
+    <!--<li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>-->
+    <!--{% else %}-->
+    <!--<li><a href="?page={{ i }}">{{ i }}</a></li>-->
+    <!--{% endif %}-->
+    <!--{% endfor %}-->
+    <!--{% if page_obj.has_next %}-->
+    <!--<li><a href="?page={{ page_obj.next_page_number }}">&raquo;</a></li>-->
+    <!--{% else %}-->
+    <!--<li class="disabled"><span>&raquo;</span></li>-->
+    <!--{% endif %}-->
+<!--</ul>-->
+<!--{% endif %}-->
+
+
+<div id="id03" class="modal">
+
+   <div class="cardpost modal-content" style="padding:20px;border-radius: 25px">
+       <div class="imgcontainer">
+           <span onclick="closemodal()" class="close" title="Close Modal">&times;</span>
+
+       </div>
+   <div class="cardh">
+      <div class="dp"><img src="" class="postdp" id="dpurl"></div>
+   <h3 style="padding-left:2%" id="postby"></h3><i id="time"></i>
+   </div>
+   <div class="cardh">
+     <h4 id="about"></h4>
+    </div>
+       <h4 id="postitem3"></h4>
+       <video class="fakeimg" id="postitem2" controls></video>
+    <img src="/static/loginboy2.png" alt="Avatar" class="fakeimg" id="postitem">
+
+
+<h3>Your Comments:</h3>
+<div>
+<textarea rows="4" cols="50" name="comment" form="usrform"  placeholder="ggw" style="width:100%"></textarea>
+<div class="edittxt">
+<i class="fa fa-bold edits" ></i>
+<i class="fa fa-italic edits" ></i>
+<i class="fa fa-underline edits" ></i>
+<button type="submit" class="cmntbtn">comment</button>
+
+
+</div>
+</div>
+</div>
+</div>
+
+{% endblock %}
