--- a/feedly/users/templates/profile.html
+++ b/feedly/users/templates/profile.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Signup</title>
-</head>
-<body>
+{% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
 <div style="text-align:center">
@@ -51,5 +45,4 @@
 <br>
 </div>
 {% endblock %}
-</body>
-</html>
+
