--- a/feedly/users/templates/base.html
+++ b/feedly/users/templates/base.html
@@ -5,13 +5,14 @@
 <head>
     <link rel="stylesheet" href="{% static '/css/home.css' %}">
     <link rel="stylesheet" href="{% static '/css/community.css' %} ">
+    <link rel="stylesheet" href="{% static '/css/post.css' %}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
           function myFunction() {
             document.getElementById("myDropdown").classList.toggle("show");
@@ -97,7 +98,53 @@ var vid=document.getElementById('postitem2');
 vid.pause();
 document.getElementById('id03').style.display='none';
 }
+
+
+function chBackcolor() {
+    if(document.body.style.backgroundColor != ""){
+        window.location.reload();
+    }
+    else
+    {document.body.style.backgroundColor = "#141d26";
+    }
+
+}
     </script>
+    <!--<script type="text/javascript">-->
+        <!--$(document).ready(function(event){-->
+          <!--$(document).on('click','#like',function(event){-->
+          <!--event.preventDefault();-->
+          <!--var pk = $(this).attr('value');-->
+          <!--$.ajax({-->
+          <!--type : 'POST',-->
+          <!--url : '{% url 'home' %}',-->
+          <!--data:{'post':pk,'csrfmiddlewaretoken':'{{ csrf_token }}'},-->
+          <!--dataType:'json',-->
+          <!--success:function(response){-->
+           <!--$('#like_section').html(response['form'])-->
+           <!--console.log(('#like_section').html(response['form']));-->
+          <!--},-->
+          <!--error:function(rs,e){-->
+          <!--console.log(rs.responseText);-->
+          <!--},-->
+          <!--});-->
+        <!--});-->
+      <!--});-->
+    <!--</script>-->
+    <style>
+    {% if form.image %}
+       #image
+       {% endif %}
+       {% if form.video %}
+       #video
+       {% endif %}
+       {% if form.text %}
+      #text
+      {% endif %}
+       {
+       background-color:green;
+       }
+    </style>
 
 </head>
 
@@ -119,7 +166,7 @@ document.getElementById('id03').style.display='none';
             </li>
             {% if request.user.is_authenticated %}
             <li>
-                <a href="{% url 'createpost' user.id 'image' %}" style="text-decoration:none"><button id="cp" type="button" ><i class="far fa-edit" style="margin-right:5%"></i> POST</button>
+                <a href="{% url 'createpost' user.id 'text' %}" style="text-decoration:none"><button id="cp" type="button" ><i class="far fa-edit" style="margin-right:5%"></i> POST</button>
                 </a>
             </li>
             {% else %}
@@ -175,7 +222,7 @@ document.getElementById('id03').style.display='none';
         <a href="{% url 'recents' rec=3 %}"><i class="fa fa-bolt">
                 <p class="side-content">RECENTS</p>
             </i></a>
-        <a href="#"><i class="fa fa-moon">
+        <a onclick = "chBackcolor()"><i class="fa fa-moon">
                 <p class="side-content">NIGHT MODE</p>
             </i></a>
         {% if request.user.is_authenticated %}
@@ -185,100 +232,8 @@ document.getElementById('id03').style.display='none';
         {% endif %}
     </div>
 
-    <div id="id01" class="modal">
-        <form id ="loginform" class="modal-content animate" action="{% url 'home' %}" method="post">
-            {% csrf_token %}
-            <div class="imgcontainer">
-                <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-                <img src="/static/loginboy2.png" alt="Avatar" class="avatar">
-            </div>
-            <h1 class="lihead" >LOGIN</h1>
-            <div class="input-container email">
-                <i class="fa fa-user icon"></i>
-                <input class="input-field" type="text" placeholder="Username" name="email" required>
-            </div>
-            <div class="input-container ">
-                <i class="fa fa-key icon"></i>
-                <input class="input-field" type="password" placeholder="Password" name="psw" required>
-            </div>
-            <button type="submit" class="btn">Login</button>
-        </form>
-    </div>
-
-    <div id="id02" class="modal row">
-        <form id="signupform" class="modal-content animate" method ="post" id="signupform">
-            {% csrf_token %}
-            <div class="imgcontainer">
-                <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
-                <img  src="/static/loginboy2.png" alt="Avatar" class="avatar">
-            </div>
-            <h1 class="suhead">SIGNUP</h1>
-            <div class="input-container email">
-                <i class="fa fa-user icon"></i>
-                <input class="input-field" type="text" placeholder="Username" name="email" id="email">
-            </div>
-            <div class="input-container">
-                <i class="fa fa-envelope icon"></i>
-                <input class="input-field" type="text" placeholder="email" name="email" onblur="validateEmail(this);"  >
-            </div>
-            <!--<div class="input-container ">-->
-                    <!--<i class="fa fa-edit icon"></i>-->
-                    <!--<input class="input-field" type="password" placeholder="First Name" name="psw">-->
-                <!--</div>-->
-                <!--<div class="input-container ">-->
-                        <!--<i class="fa fa-pencil icon"></i>-->
-                        <!--<input class="input-field" type="password" placeholder="Last Name" name="psw">-->
-                    <!--</div>-->
-            <div class="input-container ">
-                <i class="fa fa-key icon"></i>
-                <input class="input-field" type="password" placeholder="Password" name="psw">
-            </div>
-            <div class="input-container ">
-                <i class="fa fa-lock icon"></i>
-                <input class="input-field" type="password" placeholder="confirm Password" name="psw">
-            </div>
-
-            <button type="submit" class="btn">Signup</button>
-        </form>
-    </div>
-
-
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-angle-double-up"></i></button>
 
-    <!--<div id="id03" class="modal">-->
-        <!--<div class="cardpost modal-content" style="padding:20px;border-radius: 25px">-->
-            <!--<span onclick="document.getElementById('id03').style.display='none'" class="close" title="Close Modal">&times;</span>-->
-            <!--<div class="cardh">-->
-                <!--<div class="dp"><img src="login-illustration-mahisadd.jpg" class="postdp"></div>-->
-                <!--<h3 style="padding-left:2%">TITLE HEADING</h3>-->
-            <!--</div>-->
-            <!--<div class="cardh">-->
-                <!--<h4>TITLE HEADING huui hjhyj kjkjoiu h</h4>-->
-            <!--</div>-->
-            <!--<img src="login-illustration-mahisadd.jpg" alt="Avatar" class="fakeimg">-->
-            <!--<div class="cardf">-->
-                <!--<i class="like fa fa-thumbs-up"></i>-->
-                <!--<p style="padding-left:9px">200</p>-->
-                <!--<i class="like fa fa-thumbs-down" style="padding-left:9px"></i>-->
-                <!--<i class="like fa fa-comments" style="padding-left:9px"></i>-->
-                <!--<p style="padding-left:9px">200</p>-->
-                <!--<i class="like fa fa-paper-plane" style="padding-left:9px"> </i>-->
-            <!--</div>-->
-
-            <!--<h3>Your Comments:</h3>-->
-            <!--<div>-->
-                <!--<textarea rows="4" cols="50" name="comment" form="usrform"  placeholder="ggw" style="width:100%"></textarea>-->
-                <!--<div class="edittxt">-->
-                    <!--<i class="fa fa-bold edits" ></i>-->
-                    <!--<i class="fa fa-italic edits" ></i>-->
-                    <!--<i class="fa fa-underline edits" ></i>-->
-                    <!--<button type="submit" class="cmntbtn">comment</button>-->
-
-
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
     {% block content %}
 <!--loads home.html-->
     {% endblock %}
@@ -286,7 +241,10 @@ document.getElementById('id03').style.display='none';
     {% block editprofile %}
    <!--loads edit_profile.html-->
     {% endblock %}
+  <!--loads createprofile.html-->
+   {% block post %}
 
+{% endblock %}
 </body>
 
 </html>
