--- a/feedly/users/templates/home.html
+++ b/feedly/users/templates/home.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
-{% for message in messages %}
-<p id= "message">{{ message }}</p>
-{% endfor %}
+<!--{% for message in messages %}-->
+<!--<p id= "message">{{ message }}</p>-->
+<!--{% endfor %}-->
 {% for post in object_list %}
 <div class="leftcolumn">
 <div class="cardpost">
@@ -31,11 +31,16 @@
     {% endif %}
     <div class="cardf">
         <form action="{% url 'vote' %}" method="POST">
+            {{ post.result }}
             <input type="hidden" name="post" value="{{post.pk}}">
             {% csrf_token %}
-            <button type="submit" style="border:none"><i class="like fa fa-thumbs-up"></i></button>
+            {% if post in post_voted_list %}
+            <button type="submit" style="border:none" id="like" value="{{post.id}}"><i class="like fa fa-thumbs-down"></i></button>
+            {% else %}
+            <button type="submit" style="border:none" id ="like" value="{{post.id}}"><i class="like fa fa-thumbs-up"></i></button>
+            {% endif %}
         </form>
-        <p style="padding-left:9px">VOTES=</p>
+
         <!--<i class="like fa fa-thumbs-down" style="padding-left:9px"></i>-->
         {% if post.image %}
         <div id="cmntmodal" ><i onclick="item('image','{{ post.post_by.myprofile.avatar.url }}','{{ post.post_by }}','{{post.about}}','{{post.post_on}}','{{post.image.url}}')" class="like fa fa-comments" style="padding-left:9px"></i></div>
@@ -107,8 +112,12 @@
 
 
 <div id="id03" class="modal">
+
    <div class="cardpost modal-content" style="padding:20px;border-radius: 25px">
-    <span onclick="closemodal()" class="close" title="Close Modal">&times;</span>
+       <div class="imgcontainer">
+           <span onclick="closemodal()" class="close" title="Close Modal">&times;</span>
+
+       </div>
    <div class="cardh">
       <div class="dp"><img src="" class="postdp" id="dpurl"></div>
    <h3 style="padding-left:2%" id="postby"></h3><i id="time"></i>
@@ -119,14 +128,7 @@
        <h4 id="postitem3"></h4>
        <video class="fakeimg" id="postitem2" controls></video>
     <img src="/static/loginboy2.png" alt="Avatar" class="fakeimg" id="postitem">
-    <div class="cardf">
-       <i class="like fa fa-thumbs-up"></i>
-       <p style="padding-left:9px">200</p>
-       <i class="like fa fa-thumbs-down" style="padding-left:9px"></i>
-       <i class="like fa fa-comments" style="padding-left:9px"></i>
-       <p style="padding-left:9px">200</p>
-       <i class="like fa fa-paper-plane" style="padding-left:9px"> </i>
-    </div>
+
 
 <h3>Your Comments:</h3>
 <div>
