--- a/feedly/users/templates/signup1.html
+++ b/feedly/users/templates/signup1.html
@@ -2,22 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Signup</title>
 </head>
 <body>
-<h2>login</h2>
+<h2>Sign up</h2>
 <form method="post">
     {% csrf_token %}
     {% for field in form %}
     <p>
         {{ field.label_tag }}<br>
         {{ field }}
-    </p>
-    {% endfor %}
-    {% for error in messages %}
+        {% for error in field.errors %}
     <p style="color: red">{{ error }}</p>
     {% endfor %}
-    <button type="submit">Log in</button>
+    </p>
+    {% endfor %}
+    <button type="submit">Sign up</button>
 
 </form>
 </body>
