--- a/feedly/users/templates/edit_profile.html
+++ b/feedly/users/templates/edit_profile.html
@@ -46,7 +46,7 @@
             {{ form.gender }}
         </label>
 
-        <label >Date of Birth:
+        <label >Date of Birth (dd/mm/yyyy):
                 {{  form.date_of_birth }}
         </label>
         <!--<input type="text" id="lname" name="lastname" placeholder="yyyy-mm-dd">-->
