--- a/feedly/users/templates/landing.html
+++ b/feedly/users/templates/landing.html
@@ -45,7 +45,7 @@
                 <button type="submit" class="btn" style="margin-left: 23%;" >Login</button>
             </div>
             </form>
-        <a href="{% url 'signup' %}"><button type="submit" class="btn cabtn">Signup</button></a>
+        <a href="{% url 'signup' %}"><button type="submit" class="cabtn">Signup</button></a>
     </div>
 </body>
 </html>
