--- a/feedly/static/css/home.css
+++ b/feedly/static/css/home.css
@@ -105,9 +105,7 @@ font-weight: 500
 }
 
 /* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-}
+
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
@@ -339,7 +337,7 @@ img.avatar {
    float: left;
    width: 27%;
    padding-left: 4.5%;
-   margin-top:75px;
+   margin-top:90px;
    margin-left:60%;
    position:fixed;
 }
@@ -577,4 +575,54 @@ width: 100%;
 }
 .icon-bar .active {
     background-color: green;
+}
+.rightc .card{
+ float: left;
+   width: 23%;
+   margin-top:6%;
+   margin-left:65%;
+   position:absolute;
+}
+
+.nopost{
+width:40%;
+margin-left:20%;
+float:left;}
+
+
+
+
+.commenter{
+background-color:#E5E8E8;
+border:none;
+border-top:2px solid #B2BABB;
+margin-top:2%;
+padding-top:1%;
+border-left:2px solid #B2BABB;
+padding-left:2%;
+}
+
+.comment_time{
+background-color:#E5E8E8;
+width:100%;
+font-style:italic;
+border-left:2px solid #B2BABB;
+padding-left:2%;
+
+}
+
+.comment_content{
+background-color:#E5E8E8;
+border:none;
+border-bottom:2px solid #B2BABB;
+padding-bottom:1%;
+padding-top:0.8%;
+font-size:120%;
+font-weight:400;
+border-left:2px solid #B2BABB;
+padding-left:3  %;
+}
+
+.cmnthere{
+   border: 2px solid darkgrey;
 }
