--- a/feedly/static/css/post.css
+++ b/feedly/static/css/post.css
@@ -14,10 +14,12 @@
 }
 
 .cp-content{
+        padding-top:1%;
+        padding-bottom:1%;
         background-color: #DDDEDE;
-        border-radius: 25px;
+        border-radius: 15px;
         margin-right: 13%;
-        margin-top:50px;
+        margin-top:20px;
         border: 1px solid #888;
         width: 40%;
         float: right;
@@ -58,12 +60,6 @@
 }
 
 
-.cpmenu{
-    display: flex;
-    align-items: center;
-    margin: 0% 0% 2% 47%;
-    width: 50%;
-    }
 
 .choosefile{
     margin-left: 4%;
@@ -80,7 +76,7 @@
 }
 
 .txt{
-    margin: 15px 2% 8px 7%;
+    margin: 15px 2% 8px 7.5%;
     width: 50%;
     border: 2px solid #888;
     border-radius: 8px;
@@ -88,12 +84,13 @@
     font-size: 120%
 }
 .uploadbtn{
-    font-size: 120%;
-    margin-left: 59%;
+    font-size: 130%;
+    margin-left: 70%;
     color: white;
-    padding: 1%;
+    padding: 1.5% 4%;
     background-color: #888;
-    border-radius: 6px;
+    border-radius: 20px;
+    border: 1px solid #888;
 }
 
 
@@ -108,14 +105,14 @@
 }
 
 .abt{
-
-margin-left: 10%;
+margin-top:50%;
+margin-left: 6%;
 font-size:150%;
 
 }
 
 .cont .imgcont{
-background-color:black;
+
 width:90%;
 margin-left:9%;
 margin-top:10%;
@@ -125,7 +122,30 @@ height:200%;
 .imgcont{
 margin-left:10%;
 }
-.cont{
-background-color:black;
-height:1000%;
+
+.choose{
+margin-left: 7.5%;
+margin-top: 2%;
+font-size: 120%;
 }
+
+.cp-icons{
+        padding-top:0.5%;
+        padding-bottom:0.5%;
+        background-color: #DDDEDE;
+        border-radius: 25px;
+        margin-left:6.5%;
+        margin-top:20px;
+        border: 1px solid #888;
+        width: 20%;
+        float: left;
+        display:inline-block;
+
+}
+
+#image, #video, #text{
+margin-left:25px;
+padding:5px;
+}
+button:focus{
+border:none;}
